# Slideshow

./: .gitignore  API.md  README.md  key  key.pub  manage.py  pyproject.toml  requirements.txt
scripts/: install.sh  mount_smb.sh  prestart.sh  update.sh
slideshow/: __init__.py  app.py  auth.py  config.py  info.py  logging_config.py  maintenance.py  media.py  mpv_controller.py  network.py  player.py  state.py  system.py
slideshow/static/: style.css
slideshow/templates/: dashboard.html  edit_source.html  layout.html  login.html  media.html  network.html  playback.html  system.html
slideshow_manager/: README.md
